# iota

./: .gitignore  README.md  launch_miner.py  launch_orchestration.py  launch_validator.py  miner-example.env  pyproject.toml  settings.py  setup.sh  start_miner.sh  start_validators.sh  validator-example.env
base/: base_neuron.py
docs/: MULTIPART_UPLOAD_README.md
gradient_validator/: api_client.py  gradient_validator.py
logging/: serializers.py
miner/: api_client.py  miner.py
model/: configs.py  loaders.py  schedulers.py  utils.py
model/llama3/: full.py  splits.py
orchestrator/: __init__.py  api.py  dashboard_metrics.py  gradient_validator_api.py  metrics_collectors.py  miner_registry.py  mongo_state.py  orchestrator.py  serializers.py  validator_client_pool.py
pm2/: miner.config.js  validator.config.js
shared/common/: pyproject.toml
shared/common/src/common/: __init__.py  _attest_expected.py  attest_expected.py  configs.py  settings.py
shared/common/src/common/attestation/: __init__.py  payload_blob.py
shared/common/src/common/models/: api_models.py  error_models.py  miner_models.py  ml_models.py  run_flags.py
shared/common/src/common/utils/: activation_utils.py  cache.py  epistula.py  exceptions.py  formulas.py  logger_utils.py  metagraph_utils.py  metrics.py  partitions.py  profile.py  s3_utils.py  shared_states.py  timer_logger.py
shared/common/src/common/validator/: base_validator.py
shared/common/tests/: test_assign_cells_to_pairs.py
shared/common/tests/broken/: test_assign_cells_to_pairs.py
shared/subnet/: pyproject.toml
shared/subnet/src/subnet/: common_api_client.py  miner_api_client.py  test_client.py  validator_api_client.py
shared/subnet/src/subnet/base/: base_neuron.py
shared/subnet/src/subnet/model/: gpu_device.py  loaders.py  model_mixin.py  tokenizer.py  utils.py
shared/subnet/src/subnet/model/llama3/: full.py  modules.py  splits.py
shared/subnet/src/subnet/utils/: bt_utils.py  partition_utils.py  s3_torch.py  vector_utils.py
shared/subnet/tests/: test_vector_utils.py
shared/subnet/tests/broken/: test_optimizer_states.py
src/miner/: main.py  miner-example.env  pyproject.toml
src/miner/scripts/: launch_miner.sh  launch_multiple_miners.py
src/miner/src/miner/: activation_queue.py  health_server.py  new_miner.py  settings.py  state_manager.py  training.py
src/miner/src/miner/endpoint_tests/: endpoint_tests.py
src/miner/src/miner/training/: __init__.py  activation_cache.py  activation_publisher.py  activation_queue.py  training.py
src/miner/src/miner/utils/: activation_utils.py  attestation_utils.py  partition_merging.py  run_utils.py  timer_logger.py  utils.py
src/validator/: README.md  main.py  pyproject.toml  validator-example.env
src/validator/scripts/: analyze_validation_events.py  launch_multiple_validators.py  launch_validator.py  launch_validator.sh  start_validators.sh
src/validator/src/validator/: api_client.py  settings.py  validator.py
src/validator/src/validator/utils/: utils.py
storage/: activation_storage.py  api.py  serializers.py  weight_storage.py
tests/: test_optimizer_states.py  test_s3_interactions.py
utils/: auth.py  bt_utils.py  epistula.py  metagraph_syncer.py  partitions.py  s3_interactions.py  shared_states.py  vector_utils.py
