[project]
name = "iota"
version = "0.2.0"
description = "IOTA: An Incentivized, Orchestrated Training Architecture for Foundation Model Training"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
common = { workspace = true }
subnet = { workspace = true }
miner = { workspace = true }
validator = { workspace = true }

[tool.uv.workspace]
members = ["shared/*", "src/*"]

[tool.uv]
package = false
