[project]
name = "common"
version = "0.1.0"
description = "Common shared dependencies"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiobotocore>=2.23.0",
    "boto3>=1.37.33",
    "fastapi>=0.110.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=1.24.0",
    "pydantic>=2.11.3",
    "requests>=2.31.0",
    "substrate-interface>=1.7.11",
    "pyinstrument>=5.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
