[project]
name = "common"
version = "0.1.0"
description = "Common shared dependencies"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.110.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "orjson>=3.10.7",
    "substrate-interface>=1.7.11",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
