[project]
name = "miner"
version = "0.1.0"
description = "IOTA Miner"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["common", "subnet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
subnet = { workspace = true }
