[project]
name = "validator"
version = "0.1.0"
description = "IOTA Validator"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "common",
    "subnet",
    "bittensor==9.3.0",
    "bittensor-cli>=9.4.0",
    "boto3>=1.37.33",
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.110.1",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.11.3",
    "pytest-asyncio>=1.0.0",
    "retry>=0.9.2",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "transformers==4.38.2",
    "uvicorn>=0.34.2",
    "wandb>=0.19.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
subnet = { workspace = true }
