[project]
name = "validator"
version = "0.1.0"
description = "IOTA Validator"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["common", "subnet", "prometheus-fastapi-instrumentator>=7.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
subnet = { workspace = true }
